--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,19 @@
   },
   "dependencies": {
     "@flaticon/flaticon-uicons": "github:flaticon/flaticon-uicons",
+    "@hookform/resolvers": "^5.0.1",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.8.4",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.4.0",
     "react-spinners": "^0.15.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
