--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.8.4",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
