--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.9-slim
-ENV PYTHONUNBUFFERED 1
+ENV PYTHONUNBUFFERED=1
 WORKDIR /app
 COPY ./requirements.txt /app/
 RUN pip install --no-cache-dir -r /app/requirements.txt
