--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - ./backend/.env
     depends_on:
       - db
+      - redis
+    restart: always
 
   frontend:
     build: ./frontend
@@ -17,7 +19,8 @@ services:
       - ./frontend:/app
     ports:
       - "5173:5173"
-    command: npm run dev --host
+    command: npm run dev
+    restart: always
 
   db:
     image: postgres:13
@@ -29,6 +32,37 @@ services:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    restart: always
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    restart: always
+
+  celery:
+    build: ./backend
+    command: sh -c "chmod +x run_celery.sh && ./run_celery.sh"
+    volumes:
+      - ./backend:/app
+    depends_on:
+      - redis
+      - backend
+    env_file:
+      - ./backend/.env
+    restart: always
+
+  celery-beat:
+    build: ./backend
+    command: sh -c "chmod +x run_celery.sh && ./run_celery.sh beat"
+    volumes:
+      - ./backend:/app
+    depends_on:
+      - redis
+      - backend
+    env_file:
+      - ./backend/.env
+    restart: always
 
 volumes:
   postgres_data:
