--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,4 +5,4 @@ RUN npm install
 COPY . .
 EXPOSE 5173
 # CMD ["npm", "run", "dev"]
-CMD ["npm", "run", "dev", "--host"]
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
